--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # just a flag
 ENV = 'development'
-
+port = 9527
 # base api
 VUE_APP_BASE_API = '/dev-api'
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
